test/gpu/nongpu/assertOnGpu.stmt.good
assertOnGpu.chpl:9: error: @assertOnGpu encountered in non-GPU compilation
assertOnGpu.chpl:9: note: this attribute has a runtime component, and will always halt execution in a non-GPU context.
assertOnGpu.chpl:9: note: consider using '@gpu.assertEligible' to ensure that the code can be executed on the GPU without runtime checks.
